--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jspdf": "^2.3.0",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.4",
+    "vue-print-nb": "^1.6.0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
