--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "jspdf": "^2.3.0",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.4",
+    "vue-chartkick": "^1.0.0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
